--- a/src/css/components/popup.css
+++ b/src/css/components/popup.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     z-index: 4;
-    display: none;
+    /* display: none; */
 }
 
 .popup__form {
