--- a/src/css/components/dialog.css
+++ b/src/css/components/dialog.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     z-index: 5;
-    display: none;
+    /* display: none; */
 }
 
 .dialog__wrapper {
