--- a/src/css/components/icon.css
+++ b/src/css/components/icon.css
@@ -271,3 +271,17 @@
     width: 36px;
     height: 36px;
 }
+
+/* dialog thông báo */
+.dialog__icon-notify {
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -672px -462px;
+    width: 36px;
+    height: 36px;
+}
+
+/* dialog icon error */
+.dialog__icon-warning {
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -598px -463px;
+    width: 36px;
+    height: 37px;
+}
