--- a/src/css/components/tooltips.css
+++ b/src/css/components/tooltips.css
@@ -11,7 +11,7 @@
     padding: 12px 16px;
     position: absolute;
     z-index: 5;
-    top: 150%;
+    top: 114%;
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 2px 2px 2px 0 #d4d7dc;
@@ -34,6 +34,46 @@
     border-color: transparent transparent var(--bg-tooltip) transparent;
 }
 
+.tooltiptext-error {
+    visibility: hidden;
+    width: max-content;
+    text-align: center;
+    border-radius: var(--border-radius);
+    padding: 12px 16px;
+    position: absolute;
+    z-index: 5;
+    top: 114%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 2px 2px 2px 0 #d4d7dc;
+}
+
+.tooltiptext-error {
+    background-color: var(--bg-tooltip);
+    color: var(--white-color);
+    text-transform: initial;
+}
+
+.tooltiptext-error::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent var(--bg-tooltip) transparent;
+}
+
 .tooltip:hover .tooltiptext {
+    --bg-tooltip: #041434;
     visibility: visible;
+}
+
+.tooltip-error:hover .tooltiptext-error {
+    visibility: visible;
+}
+
+.tooltip-error {
+    --bg-tooltip: #ff7777;
 }
