05-03-2023 add employee, set focus

--- a/src/css/components/icon.css
+++ b/src/css/components/icon.css
@@ -277,6 +277,7 @@
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -672px -462px;
     width: 36px;
     height: 36px;
+    padding: 0 17px;
 }
 
 /* dialog icon error */
