--- a/src/css/components/icon.css
+++ b/src/css/components/icon.css
@@ -270,6 +270,7 @@
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -752px -462px;
     width: 36px;
     height: 36px;
+    padding: 0 17px;
 }
 
 /* dialog thông báo */
@@ -285,4 +286,5 @@
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -598px -463px;
     width: 36px;
     height: 37px;
+    padding: 0 17px;
 }
