--- a/src/css/components/combobox.css
+++ b/src/css/components/combobox.css
@@ -19,8 +19,8 @@
     background-color: #f6f6f6;
 }
 
-.input__wrapper-combobox:focus {
-    border: 1px solid var(--color-primary);
+.input__wrapper-combobox-focus {
+    border: 1px solid var(--color-primary) !important;
 }
 
 .combobox {
