--- a/src/css/components/input.css
+++ b/src/css/components/input.css
@@ -53,7 +53,7 @@
     color: #666666;
     display: flex;
     align-items: center;
-    padding: 8px;
+    padding: 8px 12px;
     cursor: pointer;
     background-color: var(--white-color);
     border-radius: inherit;
