--- a/src/css/components/tooltips.css
+++ b/src/css/components/tooltips.css
@@ -15,6 +15,9 @@
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 2px 2px 2px 0 #d4d7dc;
+    height: 36px;
+    display: flex;
+    align-items: center;
 }
 
 .tooltiptext {
@@ -27,6 +30,7 @@
     content: "";
     position: absolute;
     bottom: 100%;
+
     left: 50%;
     transform: translateX(-50%);
     border-width: 5px;
