--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -27,16 +27,24 @@
     flex-direction: column;
 }
 
-.content__main-right {
+.content__main-header {
     height: 60px;
     width: 100%;
     padding: 12px 16px;
     display: flex;
     align-items: center;
     column-gap: 12px;
-    justify-content: end;
+    justify-content: space-between;
     border-top-right-radius: var(--border-radius);
     border-top-left-radius: var(--border-radius);
+}
+
+.content__main-left,
+.content__main-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 18px;
 }
 
 .content__main-refresh-icon {
