--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -37,7 +37,7 @@
     left: 0;
     right: 0;
     background-color: var(--white-color);
-    max-height: 200px;
+    /* max-height: 200px; */
     width: 100%;
     border-radius: var(--border-radius);
     padding: 8px;
@@ -46,7 +46,7 @@
 
 .option__list {
     width: 100%;
-    max-height: calc(200px - 16px);
+    /* max-height: calc(200px - 16px); */
     overflow: auto;
 }
 
