--- a/src/css/base.css
+++ b/src/css/base.css
@@ -188,3 +188,10 @@ input[type="text"],
 input[type="date"] {
     font-family: "Roboto", sans-serif;
 }
+
+/* disabled div */
+div.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    background: #ccc;
+}
