update code export

--- a/src/css/components/dialog.css
+++ b/src/css/components/dialog.css
@@ -46,6 +46,7 @@
     font-weight: 400;
     font-size: 1.4rem;
     color: #1f1f1f;
+    line-height: 2rem;
     /* display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
