--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -174,6 +174,11 @@ th {
     min-width: 250px;
 }
 
+.employee thead tr th:nth-child(11),
+.employee tbody tr td:nth-child(11) {
+    min-width: 350px;
+}
+
 .employee thead tr th:nth-child(12),
 .employee tbody tr td:nth-child(12),
 .employee thead tr th:nth-child(4),
@@ -189,6 +194,10 @@ th {
 .employee thead tr th:nth-child(11),
 .employee tbody tr td:nth-child(11) {
     border-right: 0;
+}
+
+.employee tbody tr td:nth-child(11) {
+    line-height: 2rem;
 }
 
 .employee tr:hover td:nth-child(2),
