--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,6 +18,9 @@
     --btn-color-primary-press: #118044;
     --btn-opa-primary-disable: 56%;
 
+    /* coloum gap */
+    --column-gap: 12px;
+
     /* size */
     --sidebar-size: 200px;
     --header-size: 56px;
