--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -44,6 +44,18 @@
     box-shadow: 0 4px 16px rgba(23, 27, 42, 0.24);
 }
 
+.option__wrapper-lang {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: var(--white-color);
+    width: 100%;
+    border-radius: var(--border-radius);
+    padding: 8px;
+    box-shadow: 0 4px 16px rgba(23, 27, 42, 0.24);
+}
+
 .option__list {
     width: 100%;
     /* max-height: calc(200px - 16px); */
