update code the cash and export selected

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,6 +18,8 @@
     --btn-color-primary-press: #118044;
     --btn-opa-primary-disable: 56%;
 
+    --btn-color-link: #0075c0;
+
     /* coloum gap */
     --column-gap: 12px;
 
