--- a/src/css/components/icon.css
+++ b/src/css/components/icon.css
@@ -320,3 +320,9 @@
     width: 20px;
     height: 22px;
 }
+
+.accountSystem {
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -1378px -257px;
+    width: 21px;
+    height: 22px;
+}
