--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -80,7 +80,7 @@
     width: auto;
     height: 36px;
     border-radius: var(--border-radius);
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.4rem;
     text-align: left;
     display: inline-block;
@@ -96,6 +96,10 @@
 
 .btn-link-primary:active {
     color: var(--btn-color-primary-press);
+}
+
+.btn-link {
+    color: var(--btn-color-link);
 }
 
 .btn-link-delete {
