--- a/src/css/layout/sidebar/cash.css
+++ b/src/css/layout/sidebar/cash.css
@@ -80,6 +80,7 @@
 .cash__process-main {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .cash__process-top {
@@ -99,6 +100,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .cash__process-bottom-item {
@@ -108,6 +110,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: all 0.2s ease;
     list-style: none;
     cursor: pointer;
     text-decoration: none;
@@ -130,4 +133,34 @@
     width: 30%;
     height: 100%;
     background-color: var(--white-color);
+}
+
+.icon__cash {
+    width: 90px;
+    padding-top: 60px;
+    position: absolute;
+    transition: all 0.2s ease;
+    text-align: center;
+    text-decoration: none;
+}
+
+.icon__cash:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+}
+
+.receive {
+    top: 40px;
+    left: 90px;
+}
+
+.payment {
+    top: 215px;
+    left: 90px;
+}
+
+.audit {
+    top: 125px;
+    left: 335px;
+    width: 125px !important;
 }
