--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -92,3 +92,16 @@
     background-color: var(--color-primary);
     color: var(--white-color);
 }
+
+/* block lang */
+.block__lang {
+    width: 35%;
+}
+
+.input__wrapprt-lang {
+    min-width: 35% !important;
+}
+
+.input__lang {
+    width: 100%;
+}
