--- a/src/css/components/loading.css
+++ b/src/css/components/loading.css
@@ -1,92 +1,114 @@
-.loader {
+#loading-bg {
+    width: 100%;
+    height: 100%;
+    /* display:none; */
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 5;
-    /* display: none; */
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.12);
 }
 
-.lds-spinner {
-    color: official;
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
+.loading {
+    position: absolute;
+    left: calc(50% - 27px);
+    top: calc(50% - 27px);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 3px solid transparent;
 }
-.lds-spinner div {
-    transform-origin: 40px 40px;
-    animation: lds-spinner 1.2s linear infinite;
-}
-.lds-spinner div:after {
-    content: " ";
+
+.loading-modal {
+    width: 100%;
+    height: 100%;
+
     display: block;
     position: absolute;
-    top: 3px;
-    left: 37px;
-    width: 6px;
-    height: 18px;
-    border-radius: 20%;
-    background: #fff;
 }
-.lds-spinner div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
+
+.loading .effect-1,
+.loading .effect-2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background: transparent url(/src/assets/loading.svg) no-repeat center;
+    background-size: 100%;
+    z-index: 11;
 }
-.lds-spinner div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
+
+.loading .effect-1 {
+    animation: rotate 1s ease infinite;
 }
-.lds-spinner div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
+
+.loading .effect-2,
+.loading .effect-3 {
+    display: none;
 }
-.lds-spinner div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
+
+.loading .effect-2 {
+    animation: rotateOpacity 1s ease infinite 0.1s;
 }
-.lds-spinner div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
+
+.loading .effect-3 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    -webkit-animation: rotateOpacity 1s ease infinite 0.2s;
+    animation: rotateOpacity 1s ease infinite 0.2s;
+    border-radius: 50%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
-.lds-spinner div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
+
+.loading .effects {
+    transition: all 0.3s ease;
 }
-.lds-spinner div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-}
-.lds-spinner div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-}
-.lds-spinner div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-}
-.lds-spinner div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-}
-.lds-spinner div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-}
-.lds-spinner div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-}
-@keyframes lds-spinner {
+
+@keyframes rotate {
     0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(1turn);
+        transform: rotate(1turn);
+    }
+}
+
+@keyframes rotateOpacity {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+        opacity: 0.1;
+    }
+
+    100% {
+        -webkit-transform: rotate(1turn);
+        transform: rotate(1turn);
         opacity: 1;
     }
-    100% {
-        opacity: 0;
-    }
+}
+
+.apexcharts-toolbar {
+    z-index: inherit !important;
+}
+
+.report-param .box-grid .grid-loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-height: 302px;
+    z-index: 12;
 }
