--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,6 @@
 :root {
     /* color primary */
-    --color-primary: #50b83c;
+    --color-primary: #2ca01c;
     --white-color: #ffffff;
 
     /* color required */
@@ -25,13 +25,13 @@
 
     /* size */
     --sidebar-size: 200px;
-    --header-size: 56px;
-    --border-radius: 4px;
+    --header-size: 48px;
+    --border-radius: 2px;
 
     /* độ rộng cột thứ nhất, thứ 2 */
     --size-column-first: 56px;
     --size-column-second: 160px;
-    --size-row: 48px;
+    --size-row: 30px;
 
     /* bg tooltip để thay đổi khi thông báo lỗi hoặc thông báo */
     --bg-tooltip: #041434;
@@ -58,9 +58,15 @@ html {
     font-size: 62.5%;
 }
 
+@font-face {
+    font-family: notosans;
+    src: url(../assets/fonts/notosans-regular.2cb88a13.woff2);
+}
+
 body {
-    font-family: "Roboto", sans-serif;
-    font-size: 1.4rem;
+    font-family: notosans, sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 
 /* css chung */
@@ -69,7 +75,7 @@ body {
 .heading {
     font-size: 2.4rem;
     font-weight: 700;
-    color: #1f1f20;
+    color: #1111;
 }
 
 /* scroll customize */
@@ -79,16 +85,13 @@ button {
     border: 0;
 }
 .scrollbar_customize::-webkit-scrollbar {
-    background-color: #f1f1f1;
     width: 10px;
     height: 10px;
-    border-radius: 10px;
+    background-color: #f1f1f1;
 }
 
 .scrollbar_customize::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #dadada;
-    border-radius: 10px;
+    background-color: #b8bcc3;
 }
 
 /* text align- center */
@@ -191,7 +194,7 @@ button {
 
 input[type="text"],
 input[type="date"] {
-    font-family: "Roboto", sans-serif;
+    font-family: notosans, sans-serif;
 }
 
 /* disabled div */
