--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -16,6 +16,7 @@
     font-size: 14px;
     border: none;
     font-weight: 400;
+    width: calc(100% - 24px);
 }
 
 .header__left-dropdown {
@@ -25,7 +26,7 @@
 }
 
 .header__left-dropdown-text {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -33,27 +34,27 @@
 /* option list */
 .option__wrapper {
     position: absolute;
-    bottom: 100%;
+    bottom: 105%;
     left: 0;
     right: 0;
     background-color: var(--white-color);
     /* max-height: 200px; */
     width: 100%;
     border-radius: var(--border-radius);
-    padding: 8px;
-    box-shadow: 0 4px 16px rgba(23, 27, 42, 0.24);
+    box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
+    border: 1px solid #babec5;
 }
 
 .option__wrapper-lang {
     position: absolute;
-    top: 100%;
+    top: 107%;
     left: 0;
     right: 0;
     background-color: var(--white-color);
     width: 100%;
     border-radius: var(--border-radius);
-    padding: 8px;
-    box-shadow: 0 4px 16px rgba(23, 27, 42, 0.24);
+    box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
+    border: 1px solid #babec5;
 }
 
 .option__list {
@@ -70,14 +71,13 @@
     display: inline-flex;
     align-items: center;
     text-decoration: none;
-    border-radius: var(--border-radius);
     width: 100%;
-    height: 36px;
+    height: 28px;
     padding: 8px;
     color: #1f1f1f;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 400;
-    margin-top: 5px;
+    margin-top: 3px;
 }
 
 .option__list .option__item:first-child .option__link {
@@ -85,7 +85,8 @@
 }
 
 .option__link:hover {
-    background-color: rgba(80, 184, 60, 0.1);
+    background-color: #e8e9ec;
+    color: var(--color-primary);
 }
 
 .option__item.active .option__link {
