--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -11,16 +11,15 @@
 } */
 
 .btn {
-    min-width: 80px;
-    height: 36px;
-    border-radius: var(--border-radius);
-    font-weight: 500;
+    height: 26px;
+    border-radius: 3px;
     font-size: 1.3rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     outline: none;
+    font-weight: 600;
 }
 
 /* primary */
@@ -41,7 +40,7 @@
 
 .btn-default {
     background-color: var(--white-color);
-    color: #1f1f1f;
+    color: #111;
     border: 1px solid var(--boder-primary);
     cursor: pointer;
     padding: 0 16px;
@@ -78,14 +77,14 @@
 /* link button */
 .link-btn {
     width: auto;
-    height: 36px;
+    height: 26px;
     border-radius: var(--border-radius);
     font-weight: 600;
     font-size: 1.3rem;
     text-align: left;
     display: inline-block;
     text-align: center;
-    line-height: 36px;
+    line-height: 26px;
     background-color: transparent;
     cursor: pointer;
 }
@@ -137,7 +136,10 @@
 .combox-btn {
     display: inline-flex;
     align-items: center;
-    padding-left: 12px;
+    padding: 0;
+    height: 28px;
+    border-radius: 30px;
+    background-color: var(--color-primary);
 }
 
 .btn-primary-svg {
@@ -145,20 +147,41 @@
 }
 
 .combox-btn-text {
-    margin-right: 16px;
+    padding: 7px 10px 7px 16px;
+    height: 100%;
+    font-family: notosans, sans-serif;
+    font-weight: 600;
+    white-space: nowrap;
+    font-size: 13px;
+    line-height: 13px;
+    color: var(--white-color);
+}
+
+.combox-btn-text:hover {
+    background-color: var(--btn-color-primary-hover);
+    cursor: pointer;
+    border-radius: 30px 0 0 30px;
 }
 
 .combox-btn-mark {
-    height: 100%;
+    height: 70%;
     width: 1px;
     background-color: var(--white-color);
 }
 
-.combox-btn-svg {
-    width: 20px;
-    height: 20px;
-    color: var(--white-color);
-    margin: 0 12px;
+.wrap-icon-combox {
+    min-height: 100%;
+    min-width: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 0 12px 0 10px;
+}
+.wrap-icon-combox:hover {
+    background-color: var(--btn-color-primary-hover);
+    cursor: pointer;
+    border-radius: 0 30px 30px 0;
 }
 
 .btn-primary:active {
