--- a/src/css/components/combobox.css
+++ b/src/css/components/combobox.css
@@ -1,6 +1,6 @@
 .input__wrapper-combobox {
     min-width: 260px;
-    height: 36px;
+    height: 26px;
     background-color: var(--white-color);
     display: flex;
     align-items: center;
@@ -8,15 +8,6 @@
     border-radius: var(--border-radius);
     border: 1px solid var(--boder-primary);
     position: relative;
-}
-
-.input__wrapper-combobox:hover {
-    border: 1px solid #e6e6e6;
-    background-color: #f6f6f6;
-}
-
-.input__wrapper-combobox:hover .input__type {
-    background-color: #f6f6f6;
 }
 
 .input__wrapper-combobox-focus {
@@ -57,13 +48,13 @@
     top: calc(100% + 2px);
     left: 0;
     right: 0;
-    background-color: var(--white-color);
     max-height: 200px;
     width: 100%;
-    border-radius: var(--border-radius);
-    padding: 8px;
-    box-shadow: 0 4px 16px rgba(23, 27, 42, 0.24);
     display: none;
+    background-color: #fff;
+    border: 1px solid #babec5;
+    border-radius: 2px;
+    box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
 }
 
 .option__list-combobox {
@@ -80,9 +71,8 @@
     display: inline-flex;
     align-items: center;
     text-decoration: none;
-    border-radius: var(--border-radius);
     width: 100%;
-    height: 36px;
+    height: 28px;
     padding: 8px;
     color: #1f1f1f;
     font-size: 1.3rem;
@@ -95,7 +85,8 @@
 }
 
 .option__link-combobox:hover {
-    background-color: rgba(80, 184, 60, 0.1);
+    background-color: #e8e9ec;
+    color: var(--color-primary);
 }
 
 .option__item-combobox.active .option__link-combobox {
