--- a/src/css/components/icon.css
+++ b/src/css/components/icon.css
@@ -204,7 +204,7 @@
 }
 
 /* icon dropdown */
-.icon-dropdown,
+
 .input__icon-dropdown {
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -564px -365px;
     width: 8px;
@@ -214,15 +214,16 @@
 
 .icon-dropdown {
     margin-bottom: 2px;
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -900px -365px;
+    width: 8px;
+    height: 5px;
 }
 
 /* icon search */
 .input__icon-search {
-    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -1041px -89px;
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
-    transform: scale(0.91);
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -992px -360px;
+    width: 16px;
+    height: 16px;
 }
 
 /* icon question */
@@ -231,7 +232,6 @@
     width: 22px;
     height: 22px;
     cursor: pointer;
-    transform: scale(0.81);
 }
 
 /* icon close */
@@ -239,7 +239,6 @@
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -147px -147px;
     width: 18px;
     height: 18px;
-    transform: scale(0.72);
     cursor: pointer;
 }
 
@@ -286,10 +285,9 @@
 
 /* dialog thông báo */
 .dialog__icon-notify {
-    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -672px -462px;
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -832px -462px;
     width: 36px;
     height: 36px;
-    padding: 0 17px;
 }
 
 /* dialog icon error */
@@ -311,6 +309,12 @@
     background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -705px -258px;
     width: 23px;
     height: 20px;
+}
+
+.icon__combox-btn {
+    background: url("../../assets/img/Sprites.64af8f61.svg") no-repeat -852px -365px;
+    width: 8px;
+    height: 5px;
 }
 
 /* Cash */
