--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -7,6 +7,46 @@
 
 /* begin header content*/
 
+.batchExecution {
+    height: 26px;
+    padding: 0 16px;
+    position: relative;
+    display: inline-block;
+    border-radius: 3px;
+    transition: all 0.25s ease;
+    overflow: visible;
+}
+
+.batchExecution.disabled {
+    border: 1px solid #b1b2b3;
+    background: 0 0;
+    color: #afafaf;
+    cursor: default;
+    pointer-events: none;
+}
+
+.batchExecution.active {
+    border: 1px solid #3b3c3f;
+    color: #111;
+    background-color: transparent;
+}
+
+.batchExecution.active:hover {
+    background-color: #d2d3d6;
+}
+
+.batchExecution .ms-button-text.ms-button--text.flex.align-center {
+    font-weight: 600;
+    position: relative;
+    color: inherit;
+    display: flex;
+    white-space: nowrap;
+    font-size: 13px;
+    line-height: 13px;
+    justify-content: center;
+    align-items: center;
+}
+
 .content__header {
     width: 100%;
     height: 36px;
