--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -1,7 +1,7 @@
 .content {
     width: 100%;
     height: calc(100% - var(--header-size));
-    background-color: #eeeff1;
+    background-color: #eceef1;
     padding: 24px 24px 48px 24px;
 }
 
