--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -44,6 +44,7 @@
     border: 1px solid var(--boder-primary);
     cursor: pointer;
     padding: 0 16px;
+    font-family: notosans, sans-serif;
 }
 
 .btn-primary:hover {
@@ -99,6 +100,7 @@
 
 .btn-link {
     color: var(--btn-color-link);
+    font-family: notosans, sans-serif;
 }
 
 .btn-link-delete {
