--- a/src/css/components/contextMenu.css
+++ b/src/css/components/contextMenu.css
@@ -11,19 +11,24 @@
 .contextmenu__fun-item {
     list-style: none;
     text-align: left;
+    height: 26px;
 }
 .contextmenu__fun-link {
     display: inline-block;
     text-decoration: none;
-    border-radius: var(--border-radius);
-    width: 100%;
+    min-width: 100%;
+    min-width: max-content;
     padding: 5px 10px;
     color: #1f1f1f;
+    height: 26px;
     font-size: 1.3rem;
+    /* text-align: left; */
+    /* text-align: center; */
+    display: flex;
     font-weight: 400;
+    align-items: center;
     transition: all 0.25s ease;
 }
-
 .contextmenu__fun-list
     .contextmenu__fun-item:first-child
     .contextmenu__fun-link {
