--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -47,6 +47,39 @@
     align-items: center;
 }
 
+.filter-conditions {
+    line-height: 26px;
+}
+
+.filter-item {
+    display: inline-block;
+    margin-right: 10px;
+    position: relative;
+    color: #0075c0;
+    padding-right: 20px;
+    white-space: nowrap;
+    height: 26px;
+}
+
+.delete-filter-icon {
+    position: absolute;
+    right: -3px;
+    top: 6px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+}
+
+.delete-all-filter {
+    color: #0075c0;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.delete-all-filter:hover {
+    text-decoration: underline;
+}
+
 .content__header {
     width: 100%;
     height: 36px;
