add compoent NotData, update code case DOB, gender

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -254,6 +254,13 @@ div.disabled {
     padding-right: 4px !important;
 }
 
+.w-full {
+    width: 100% !important;
+}
+.pb-4 {
+    padding-bottom: 1rem !important;
+}
+
 .opacity {
     opacity: 0.5;
 }
