--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -88,6 +88,7 @@
     line-height: 26px;
     background-color: transparent;
     cursor: pointer;
+    font-family: notosans, sans-serif;
 }
 
 .btn-link-primary {
