--- a/src/css/layout/settingUI.css
+++ b/src/css/layout/settingUI.css
@@ -324,3 +324,58 @@ th {
 .resize {
     resize: both !important;
 }
+
+.editable:first-child {
+    flex: 1;
+}
+.editable {
+    position: relative;
+    min-height: 28px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.td-text {
+    display: flex;
+    white-space: pre-wrap;
+    flex: 1;
+}
+
+.line-clamp-1 {
+    -webkit-line-clamp: 1;
+}
+.cell-content {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: normal;
+}
+.ms-con-textarea {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.ms-con-textarea .text-area--validate {
+    flex: 1;
+}
+.ms-con-textarea .grid-editor {
+    padding: 3px 10px;
+    line-height: 20px;
+    overflow: hidden;
+}
+
+.ms-con-textarea .ms-textarea {
+    resize: none;
+    border-radius: 3px;
+    border: 1px solid #babec5;
+    font-family: inherit;
+    display: block;
+    color: #000;
+    font-size: 13px;
+    width: 100%;
+    height: 100%;
+    outline: none;
+}
